--- a/global_templates/base.html
+++ b/global_templates/base.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="{% static 'app/images/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'app/css/global.css' %}">
   <!-- JQuery  -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
