Add site logos, update favicon

--- a/global_templates/base.html
+++ b/global_templates/base.html
@@ -32,7 +32,7 @@
     {% block content %}
     <!-- Page content -->
     {% endblock %}
-    <img id="bella-logo" src="{% static 'app/images/bellahouston-logo.png' %}" alt="Bellahouston Academy Logo">
+    <a href="{% url 'index' %}"><img id="mrwang-logo" src="{% static 'app/images/mrwang-logo.png' %}" alt="Mr Wang Logo"></a>
   </main>
 
   <!-- Footer -->
