add projects page

--- a/global_templates/base.html
+++ b/global_templates/base.html
@@ -24,6 +24,7 @@
       <a href="{% url 'index' %}">Home</a> |
       <a href="{% url 'teacher' %}">Teacher Resources</a> |
       <a href="{% url 'pupil' %}">Pupil Resources</a> |
+      <a href="{% url 'projects' %}">Other Projects</a> |
       <a href="{% url 'about' %}">About</a>
     </nav>
   </header>
