Add initial mobile media queries

--- a/global_templates/base.html
+++ b/global_templates/base.html
@@ -1,14 +1,16 @@
 {% load static %}
 
 <!DOCTYPE html>
-<!-- Quiz Generator -->
+<!-- mrwang.co.uk -->
 <!-- Copyright Timothy Wang 2025 -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %} | Mr Wang</title>
   <link rel="icon" type="image/x-icon" href="{% static 'app/images/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'app/css/global.css' %}">
+  <link rel="stylesheet" href="{% static 'app/css/global-mobile.css' %}">
   <!-- JQuery  -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <!-- Google Fonts -->
