upload dm45 notes

--- a/global_templates/base.html
+++ b/global_templates/base.html
@@ -25,9 +25,9 @@
   <header>
     <nav>
       <div class="nav-header">
-        <span class="nav-title">Menu</span>
+        <a href="{% url 'index' %}"><span class="nav-title">mrwang.co.uk</span></a>
         <button class="nav-toggle" aria-label="Toggle navigation">
-          ☰
+          &#9776;
         </button>
       </div>
 
