--- a/global_templates/base.html
+++ b/global_templates/base.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %} | Mr Wang</title>
-  <link rel="icon" type="image/x-icon" href="{% static 'app/images/favicon.ico' %}">
+  <link rel="icon" type="image/x-icon" href="{% static 'app/images/logos/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'app/css/global.css' %}">
   <link rel="stylesheet" href="{% static 'app/css/global-mobile.css' %}">
   <!-- JQuery  -->
@@ -45,7 +45,7 @@
     {% block content %}
     <!-- Page content -->
     {% endblock %}
-    <a href="{% url 'index' %}"><img id="mrwang-logo" src="{% static 'app/images/mrwang-logo.png' %}" alt="Mr Wang Logo"></a>
+    <a href="{% url 'index' %}"><img id="mrwang-logo" src="{% static 'app/images/logos/mrwang-logo.png' %}" alt="Mr Wang Logo"></a>
   </main>
 
   <!-- Footer -->
