--- a/global_templates/base.html
+++ b/global_templates/base.html
@@ -32,9 +32,9 @@
       </div>
 
       <div class="nav-links">
-        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'index' %}"><b>mrwang.co.uk/</b></a>
         <a href="{% url 'teacher' %}">Teacher Resources</a>
-        <a href="{% url 'pupil' %}">Pupil Resources</a>
+        <a href="{% url 'subjects' %}">Pupil Resources</a>
         <a href="{% url 'projects' %}">Other Projects</a>
         <a href="{% url 'about' %}">About</a>
       </div>
